@@ -9,6 +9,8 @@ Features added
 
 * #2513: A better default settings for XeLaTeX
 * #3096: ``'maxlistdepth'`` key to work around LaTeX list limitations
+* #3060: autodoc supports documentation for attributes of Enum class. Now autodoc render
+  just the value of Enum attributes instead of Enum attribute representation.
 
 Bugs fixed
 ----------
